# orfmi

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/orfmi/: builder.py  cli.py  config.py  ec2.py  ssh.py
src/ormi/: __main__.py  builder.py  cli.py  config.py
test/: __init__.py  conftest.py
test/e2e/: test_e2e.py
test/integration/: test_cli.py
test/unit/: conftest.py  test_builder.py  test_cli.py  test_config.py  test_ec2.py  test_main.py  test_ssh.py
